upgrade to 21 jdk